--- a/Views/User/Index.cshtml
+++ b/Views/User/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<DotNetCoreSqlDb.Models.Todo>
+﻿@model IEnumerable<DotNetCoreSqlDb.Models.User>
 
 @{
     ViewData["Title"] = "Index";
