--- a/Views/User/Details.cshtml
+++ b/Views/User/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model DotNetCoreSqlDb.Models.Todo
+﻿@model DotNetCoreSqlDb.Models.User
 
 @{
     ViewData["Title"] = "Details";
@@ -7,7 +7,7 @@
 <h1>Details</h1>
 
 <div>
-    <h4>Todo</h4>
+    <h4>User</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
