--- a/Views/User/Edit.cshtml
+++ b/Views/User/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model DotNetCoreSqlDb.Models.Todo
+﻿@model DotNetCoreSqlDb.Models.User
 
 @{
     ViewData["Title"] = "Edit";
@@ -6,7 +6,7 @@
 
 <h1>Edit</h1>
 
-<h4>Todo</h4>
+<h4>User</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
