--- a/Views/User/Index.cshtml
+++ b/Views/User/Index.cshtml
@@ -13,13 +13,55 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Description)
+                @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.CreatedDate)
+                <a>Wk 1</a>
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Done)
+                <a>Wk 2</a>
+            </th>
+            <th>
+                <a>Wk 3</a>
+            </th>
+            <th>
+                <a>Wk 4</a>
+            </th>
+            <th>
+                <a>Wk 5</a>
+            </th>
+            <th>
+                <a>Wk 7</a>
+            </th>
+            <th>
+                <a>Wk 8</a>
+            </th>
+            <th>
+                <a>Wk 9</a>
+            </th>
+            <th>
+                <a>Wk 10</a>
+            </th>
+            <th>
+                <a>Wk 11</a>
+            </th>
+            <th>
+                <a>Wk 12</a>
+            </th>
+            <th>
+                <a>Wk 13</a>
+            </th>
+            <th>
+                <a>Wk 14</a>
+            </th>
+            <th>
+                <a>Wk 15</a>
+            </th>
+            <th>
+                <a>Wk 16</a>
+            </th>
+            <th>
+                <a>Wk 17</a>
             </th>
         </tr>
     </thead>
@@ -27,16 +69,60 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Description)
+                @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.CreatedDate)
+                @Html.DisplayFor(modelItem => item.Member1)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Done)
+                @Html.DisplayFor(modelItem => item.Member1)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
+                @Html.DisplayFor(modelItem => item.Member1)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Member1)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Member1)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Member1)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Member1)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Member1)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Member1)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Member1)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Member1)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Member1)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Member1)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Member1)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Member1)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Member1)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Member1)
+            </td>
+            <td>
                 <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
             </td>
