--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -1,6 +1,75 @@
-﻿@{
-    ViewData["Title"] = "Privacy Policy";
-}
-<h1>@ViewData["Title"]</h1>
+﻿@model DotNetCoreSqlDb.Models.Playersstatistics
 
-<p>Use this page to detail your site's privacy policy.</p>
+@{
+    ViewData["Title"] = "Test Team";
+}
+
+<h1>Test Player</h1>
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Player)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.week1)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.week2)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.week3)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.week4)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.week5)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.week6)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.week7)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.week8)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.week9)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.week10)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.week11)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.week12)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.week13)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.week14)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.week15)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.week16)
+            </th>6
+            <th>
+                @Html.DisplayNameFor(model => model.week17)
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+            <tr>
+                <th>
+                    @Html.DisplayFor(model => model.ID)
+                </th>
+            </tr>
+        </tbody>
+</table>
+
