--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -1,78 +1,8 @@
-﻿@model IEnumerable<DotNetCoreSqlDb.Models.Playersstatistics>
-
-@{
-    ViewData["Title"] = "Test Team";
+﻿@{
+    ViewData["Title"] = "Privacy";
 }
 
-<h1>Test Player</h1>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Player)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.week1)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.week2)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.week3)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.week4)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.week5)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.week6)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.week7)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.week8)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.week9)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.week10)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.week11)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.week12)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.week13)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.week14)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.week15)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.week16)
-            </th>6
-            <th>
-                @Html.DisplayNameFor(model => model.week17)
-            </th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model)
-{
-            <tr>
-                <th>
-                    @Html.DisplayFor(modelItem => item.Player)
-                </th>
-            </tr>
-}
-        </tbody>
-</table>
-
+<div class="text-center">
+    <h1 class="display-4">Privacy</h1>
+    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+</div>
