--- a/Views/User/Delete.cshtml
+++ b/Views/User/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model DotNetCoreSqlDb.Models.userType
+﻿@model DotNetCoreSqlDb.UserType
 
 @{
     ViewData["Title"] = "Delete";
@@ -26,7 +26,7 @@
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="ID" />
+        <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
