--- a/Views/User/Details.cshtml
+++ b/Views/User/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model DotNetCoreSqlDb.Models.userType
+﻿@model DotNetCoreSqlDb.UserType
 
 @{
     ViewData["Title"] = "Details";
@@ -31,6 +31,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.ID">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
