--- a/Views/User/Create.cshtml
+++ b/Views/User/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model DotNetCoreSqlDb.UserType
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Sign Up";
 }
 
-<h1>Create</h1>
+<h1>Sign Up / Create Your Team</h1>
 
 <h4>User</h4>
 <hr />
@@ -29,6 +29,48 @@
                 <div class="col-md-10">
                     <input asp-for="Password" class="form-control" />
                     <span asp-validation-for="Password" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="form-group">
+                <label asp-for="Member1" class="col-md-2 control-label"></label>
+                <div class="col-md-10">
+                    <input asp-for="Member1" class="form-control" />
+                    <span asp-validation-for="Member1" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="form-group">
+                <label asp-for="Member2" class="col-md-2 control-label"></label>
+                <div class="col-md-10">
+                    <input asp-for="Member2" class="form-control" />
+                    <span asp-validation-for="Member2" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="form-group">
+                <label asp-for="Member3" class="col-md-2 control-label"></label>
+                <div class="col-md-10">
+                    <input asp-for="Member3" class="form-control" />
+                    <span asp-validation-for="Member3" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="form-group">
+                <label asp-for="Member4" class="col-md-2 control-label"></label>
+                <div class="col-md-10">
+                    <input asp-for="Member4" class="form-control" />
+                    <span asp-validation-for="Member4" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="form-group">
+                <label asp-for="Member5" class="col-md-2 control-label"></label>
+                <div class="col-md-10">
+                    <input asp-for="Member5" class="form-control" />
+                    <span asp-validation-for="Member5" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="form-group">
+                <label asp-for="Member6" class="col-md-2 control-label"></label>
+                <div class="col-md-10">
+                    <input asp-for="Member6" class="form-control" />
+                    <span asp-validation-for="Member6" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group">
