--- a/Views/Playersstatistics/Index.cshtml
+++ b/Views/Playersstatistics/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<DotNetCoreSqlDb.Playersstatistics>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Player Stats";
 }
 
 <h1>Player Statistics</h1>
